--- a/css/donate.css
+++ b/css/donate.css
@@ -14,7 +14,7 @@
 
 
 body {
-    background-image: url("images/bg.jpeg");
+    background-image: url("../images/bg.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     /* background-color: rgba(0, 0, 0, 0.5); */
@@ -28,7 +28,7 @@ body {
 
 @media screen and (max-width:800px) {
     body {
-        background-image: url("images/bg.jpeg");
+        background-image: url("../images/bg.jpeg");
         background-size: cover;
         height: 800px;
     }
