--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-    background-image: url("images/bg.jpeg");
+    background-image: url("../images/bg.jpeg");
     background-size: cover;
     height: auto;
     background-repeat: no-repeat;
@@ -33,7 +33,7 @@ body {
 
 @media screen and (max-width:800px) {
     body {
-        background-image: url("images/bg.jpeg");
+        background-image: url("../images/bg.jpeg");
         background-size: cover;
         height: 600px;
 
